--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   neo4j:
-    container_name: neo4j_sf1
+    container_name: neo4j_finbench
     image: neo4j:latest
     ports:
       - 7474:7474
@@ -18,10 +18,13 @@ services:
       - ./scripts:/var/lib/neo4j/scripts
     command: >
       bash -c "
-      neo4j-admin set-initial-password password &&
-      neo4j start && 
-      until cypher-shell -u neo4j -p password --format plain < /var/lib/neo4j/scripts/init.cypher; do
-        echo 'Waiting for Neo4j to be ready...';
+      neo4j start &&
+      echo 'Waiting for Neo4j to be ready...' &&
+      until cypher-shell --format plain 'RETURN 1' > /dev/null 2>&1; do
+        echo 'Waiting...';
         sleep 5;
       done;
+      echo 'Neo4j is ready. Starting data import...' &&
+      cypher-shell --format plain < /var/lib/neo4j/scripts/init.cypher &&
+      echo 'Data import completed.' &&
       neo4j console"
