--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       - NEO4J_server_memory_heap_initial__size=6G
       - NEO4J_server_memory_heap_max__size=6G
       - NEO4J_server_bolt_listen__address=:7689
+      - NEO4J_dbms_shell_enabled=true
+      - NEO4J_dbms_shell_host=127.0.0.1
+      - NEO4J_dbms_shell_port=1337
       - NEO4J_dbms_security_auth__enabled=false
       - NEO4J_apoc_export_file_enabled=true
       - NEO4J_apoc_import_file_enabled=true
